Add tests for ios and update fixture for apps tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,11 @@ python-dotenv = "^1.0.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = 'INFO'
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+addopts = "--clean-alluredir --alluredir=allure-results -s"
