--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^8.3.2"
 appium-python-client = "^4.1.0"
 allure-pytest = "^2.13.5"
 python-dotenv = "^1.0.1"
+requests = "^2.32.3"
 
 
 [build-system]
