Fix some mistakes

--- a/.env.bstack_android
+++ b/.env.bstack_android
@@ -1,6 +1,7 @@
 platformName = 'android'
 platformVersion = '12.0'
 deviceName = 'Samsung Galaxy S22 Ultra'
+udid = None
 
 app = 'bs://63e093c6f0d8d114c1bb1f5dcad0ccebc2c184a8'
 appWaitActivity = 'org.wikipedia.*'
