--- a/.env.bstack_ios
+++ b/.env.bstack_ios
@@ -1,6 +1,7 @@
 platformName = 'ios'
 platformVersion = '16'
 deviceName = 'iPhone 14 Pro Max'
+udid = None
 
 app = 'bs://sample.app'
 appWaitActivity=None
