--- a/.env.local_emulator
+++ b/.env.local_emulator
@@ -1,5 +1,7 @@
 platformName = 'android'
+platformVersion = None
 deviceName = 'Pixel 8 API 33'
+udid = 'emulator-5554'
 
 app = 'resources/app-alpha-universal-release.apk'
 appWaitActivity = 'org.wikipedia.*'
