--- a/.env.local_real
+++ b/.env.local_real
@@ -1,5 +1,7 @@
 platformName = 'android'
+platformVersion = None
 deviceName = 'samsung SM-M315F'
+udid = 'R58N64WCR5J'
 
 app = 'resources/app-alpha-universal-release.apk'
 appWaitActivity = 'org.wikipedia.*'
