Add interactive debugging for browserstack tests

--- a/.env.bstack_ios
+++ b/.env.bstack_ios
@@ -11,3 +11,4 @@ remote_url = 'http://hub.browserstack.com/wd/hub'
 projectName='First Python project'
 buildName='browserstack-build-1'
 session_name='BStack first_test'
+interactiveDebugging = True
