--- a/.env.bstack_android
+++ b/.env.bstack_android
@@ -10,3 +10,4 @@ remote_url = 'http://hub.browserstack.com/wd/hub'
 projectName='First Python project'
 buildName='browserstack-build-1'
 session_name='BStack first_test'
+interactiveDebugging = True
